--- a/myProject/my-live/pages/index/index.wxss
+++ b/myProject/my-live/pages/index/index.wxss
@@ -35,12 +35,17 @@
     font-size: 22rpx;
 }
 
+.lives-footage{
+
+}
 .footage-item {
-    width: 236rpx;
+    width: 230rpx;
+    height: 230rpx;
+    margin:0 3rpx;
     display: inline-block;
 }
 
 .lives-footage {
     width: 100%;
-    height: 236rpx;
+    height: 100%;
 }
