--- a/myProject/my-live/pages/index/index.wxss
+++ b/myProject/my-live/pages/index/index.wxss
@@ -21,14 +21,17 @@
 }
 
 .lives {
-    padding: 10rpx 21rpx;
+    width: 100%;
+    /* padding: 10rpx 21rpx; */
     border-bottom: 1rpx solid #e3e3e3;
 }
 
 .lives-content, .lives-time {
     margin-bottom: 15rpx;
 }
-
+.lives-content-text{
+    margin-bottom: 30rpx;
+}
 .lives-time {
     margin-top: 10px;
     color: #8c8c8c;
@@ -36,16 +39,28 @@
 }
 
 .lives-footage{
-
+    padding-left: 2rpx;
 }
 .footage-item {
-    width: 230rpx;
-    height: 230rpx;
-    margin:0 3rpx;
+    width: 225rpx;
+    height: 225rpx;
+    margin:0 2rpx;
+    margin-bottom: 4rpx;
     display: inline-block;
 }
-
+.footage-item image{
+    vertical-align:bottom
+}
 .lives-footage {
     width: 100%;
     height: 100%;
+    /* min-height: 350rpx; */
+}
+
+.end-text{
+    font-size: 20rpx;
+    text-align: center;
+    color: #8c8c8c;
+    line-height: 50rpx;
+    margin-bottom: 20rpx;
 }
