--- a/myProject/free-core/src/views/chatHome/index.css
+++ b/myProject/free-core/src/views/chatHome/index.css
@@ -1,3 +1,7 @@
+body{
+    overflow: hidden;
+}
+
 .app{
     padding-top: 100px;
 }
@@ -16,5 +20,16 @@
 }
 .msg-content{
     background-color: aquamarine;
-    padding: 2px 10px;
+    padding: 3px 10px;
+    display: inline-block;
+    min-width: 50px;
+    text-align: left;
 }
+.msg-content-img .ant-image-img{
+    max-height: 30vh;
+    width:auto !important;
+}
+.ant-card-bordered{
+    background-color: #f5f5f5;
+}
+
